--- a/src/styles.css
+++ b/src/styles.css
@@ -8,6 +8,10 @@ body {
   margin: 0 auto;
 }
 
+.text-center {
+  text-align: center;
+}
+
 .grid {
   display: grid;
   grid-gap: 64px;
@@ -17,14 +21,51 @@ body {
   grid-template-columns: 1fr 1fr;
 }
 
+.grid-3-columns {
+  grid-template-columns: 1fr 1fr 1fr;
+}
+
 .grid-3-columns-with-first-narrow {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
+.card {
+  background: #272435;
+  margin: 30px 0;
+}
+
+.card-body {
+  padding: 30px;
+}
+
+.card-footer {
+  padding: 0 30px 30px;
+}
+
+.button {
+  display: block;
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 21px;
+  text-align: center;
+  letter-spacing: 3px;
+  text-transform: uppercase;
+  text-decoration: none;
+  background-color: #462cb3;
+  color: #ffffff;
+  padding: 16px;
+}
+
 section {
-  max-width: 1200px;
+  max-width: 100%;
   margin: 0 auto;
-  padding: 100px 0;
+  padding: 100px;
+}
+
+.secondary-section {
+  background: #181525;
 }
 
 header {
@@ -101,6 +142,26 @@ main h3 {
   margin: 0;
 }
 
+main h4 {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1;
+  color: #ffffff;
+  margin: 0;
+}
+
+main h5 {
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 700;
+  font-size: 13px;
+  line-height: 1;
+  color: #ffffff;
+  margin: 0;
+}
+
 main p {
   font-family: "Poppins";
   font-style: normal;
@@ -111,8 +172,9 @@ main p {
   opacity: 0.7;
 }
 
-main .seoultower {
+main .image-responsive {
   max-width: 100%;
+  display: block;
 }
 
 footer {
