--- a/src/styles.css
+++ b/src/styles.css
@@ -29,9 +29,18 @@ body {
   grid-template-columns: 1fr 2fr 2fr;
 }
 
+.embed {
+  width: 100%;
+  aspect-ratio: 1 /1;
+}
+
 .card {
   background: #272435;
   margin: 30px 0;
+}
+
+.card-header.grid {
+  grid-gap: 0;
 }
 
 .card-body {
@@ -173,7 +182,7 @@ main p {
 }
 
 main .image-responsive {
-  max-width: 100%;
+  width: 100%;
   display: block;
 }
 
@@ -240,5 +249,12 @@ footer a {
 
   section {
     padding: 30px;
+  }
+
+  .card-header img {
+    display: none;
+  }
+  .embed {
+    aspect-ratio: 16/9;
   }
 }
