Updated to Seoul and image background color

--- a/src/styles.css
+++ b/src/styles.css
@@ -78,7 +78,10 @@ section {
 }
 
 header {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.7)),
+  background-image: linear-gradient(
+      rgba(39, 32, 68, 0.6),
+      rgba(39, 32, 68, 0.6)
+    ),
     url("../images/lotteworldtower.jpg");
   background-repeat: no-repeat;
   background-size: cover;
