--- a/src/styles.css
+++ b/src/styles.css
@@ -82,6 +82,14 @@ section .title {
   margin-bottom: 20px;
 }
 
+section a {
+  text-decoration: none;
+}
+
+section a:hover {
+  text-decoration: underline;
+}
+
 header {
   background-image: linear-gradient(
       rgba(39, 32, 68, 0.6),
