--- a/src/styles.css
+++ b/src/styles.css
@@ -82,10 +82,6 @@ section .title {
   margin-bottom: 20px;
 }
 
-section a {
-  text-decoration: none;
-}
-
 section a:hover {
   text-decoration: underline;
 }
@@ -233,13 +229,14 @@ footer ul {
 
 footer li {
   list-style: none;
-  margin: 0;
+  margin: 8px 0 0;
   padding: 0;
 }
 
 footer a {
   color: white;
   opacity: 0.7;
+  text-decoration: none;
 }
 
 @media (max-width: 960px) {
